# essence

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  main.rs  summarizer.rs  transcriber.rs
